college link added to footer, team updated, events updated

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -275,6 +275,8 @@
                                         data-toggle="tab">Declaration</a></li>
                                 <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3"
                                         data-toggle="tab">Resume Template</a></li>
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-4"
+                                        data-toggle="tab">Brochure</a></li>
                             </ul>
                             <!-- Tab panes-->
                             <div class="tab-content">
@@ -571,6 +573,10 @@
                                 <li class="object-inline">
                                     <span class="icon icon-md mdi mdi-email text-primary"></span>
                                     <a class="link-default" href="mailto:tpo@ccet.ac.in">tpo@ccet.ac.in</a>
+                                </li>
+                                <li class="object-inline">
+                                    <span class="icon icon-md mdi mdi-link-variant text-primary"></span>
+                                    <a class="link-default" target="_blank" href="https://www.ccet.ac.in">www.ccet.ac.in</a>
                                 </li>
                             </ul>
                         </div>
