--- a/contact-us.html
+++ b/contact-us.html
@@ -571,25 +571,6 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Deepika Sharma.jpg">
-              <div class="overlayteam" style="text-align: center;"><a
-                  href="https://www.linkedin.com/in/deepika-sharma-637979209" target="_blank"><i
-                    class="fa fa-linkedin-square" style="font-style: normal;"></i>
-                </a></div>
-            </div>
-            <div class="team-card-content">
-              <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Deepika Sharma
-              </p>
-              <p class="text-blk team-position" style="text-align: center;">
-                Executive Member
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-          <div class="team-card">
-            <div class="team-img-wrapper">
               <img class="team-img" src="images\STUDENT TEAM\2023_Team\Devashish Gupta.jpg">
               <div class="overlayteam" style="text-align: center;"><a
                   href="https://www.linkedin.com/in/devashish-gupta-066a16200" target="_blank"><i
@@ -675,25 +656,6 @@
             <div class="team-card-content">
               <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
                 Nirbhik Kakkar
-              </p>
-              <p class="text-blk team-position" style="text-align: center;">
-                Executive Member
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-          <div class="team-card">
-            <div class="team-img-wrapper">
-              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Shivam Kumar.jpg">
-              <div class="overlayteam" style="text-align: center;"><a
-                  href="https://www.linkedin.com/in/shivam-kumar2003" target="_blank">
-                  <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
-                </a></div>
-            </div>
-            <div class="team-card-content">
-              <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Shivam Kumar
               </p>
               <p class="text-blk team-position" style="text-align: center;">
                 Executive Member
@@ -799,26 +761,6 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Vineet Ahuja.png"
-                style="background-color: rgb(177, 177, 177);">
-              <div class="overlayteam" style="text-align: center;"><a
-                  href="https://www.linkedin.com/in/vineet-ahuja-623ab6233" target="_blank"><i
-                    class="fa fa-linkedin-square" style="font-style: normal;"></i>
-                </a></div>
-            </div>
-            <div class="team-card-content">
-              <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Vineet Ahuja
-              </p>
-              <p class="text-blk team-position" style="text-align: center;">
-                Executive Member
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-          <div class="team-card">
-            <div class="team-img-wrapper">
               <img class="team-img" src="images\STUDENT TEAM\2023_Team\Yadvi Nanda.jpg">
               <div class="overlayteam" style="text-align: center;"><a
                   href="https://www.linkedin.com/in/yadvi-nanda-b59318202" target="_blank"><i
@@ -828,25 +770,6 @@
             <div class="team-card-content">
               <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
                 Yadvi Nanda
-              </p>
-              <p class="text-blk team-position" style="text-align: center;">
-                Executive Member
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-          <div class="team-card">
-            <div class="team-img-wrapper">
-              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Shreya Pandey.jpeg">
-              <div class="overlayteam" style="text-align: center;"><a
-                  href="https://www.linkedin.com/in/shreya-pandey-a8875320a/" target="_blank"><i
-                    class="fa fa-linkedin-square" style="font-style: normal;"></i>
-                </a></div>
-            </div>
-            <div class="team-card-content">
-              <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Shreya Pandey
               </p>
               <p class="text-blk team-position" style="text-align: center;">
                 Executive Member
@@ -945,6 +868,10 @@
                     <span class="icon icon-md mdi mdi-email text-primary"></span>
                     <a class="link-default" href="mailto:tpo@ccet.ac.in">tpo@ccet.ac.in</a>
                   </li>
+                  <li class="object-inline">
+                    <span class="icon icon-md mdi mdi-link-variant text-primary"></span>
+                    <a class="link-default" target="_blank" href="https://www.ccet.ac.in">www.ccet.ac.in</a>
+                </li>
                 </ul>
               </div>
             </div>
