--- a/events.html
+++ b/events.html
@@ -327,6 +327,18 @@
                             <div class="thumbnail-classic-dummy"></div>
                         </a>
                     </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/events/Alumni Week_2023.jpeg" data-lightgallery="item"><img
+                                class="thumbnail-classic-image" src="images/events/Alumni Week_2023.jpeg" alt=""
+                                width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Alumni Week </p>
+                                <p class="thumbnail-classic-text">10-13 April, 2023</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -399,6 +411,10 @@
                                 <li class="object-inline">
                                     <span class="icon icon-md mdi mdi-email text-primary"></span>
                                     <a class="link-default" href="mailto:tpo@ccet.ac.in">tpo@ccet.ac.in</a>
+                                </li>
+                                <li class="object-inline">
+                                    <span class="icon icon-md mdi mdi-link-variant text-primary"></span>
+                                    <a class="link-default" target="_blank" href="https://www.ccet.ac.in">www.ccet.ac.in</a>
                                 </li>
                             </ul>
                         </div>
