--- a/webmasters.html
+++ b/webmasters.html
@@ -471,6 +471,10 @@
                   <span class="icon icon-md mdi mdi-email text-primary"></span>
                   <a class="link-default" href="mailto:tpo@ccet.ac.in">tpo@ccet.ac.in</a>
                 </li>
+                <li class="object-inline">
+                  <span class="icon icon-md mdi mdi-link-variant text-primary"></span>
+                  <a class="link-default" target="_blank" href="https://www.ccet.ac.in">www.ccet.ac.in</a>
+              </li>
               </ul>
             </div>
           </div>
