--- a/past-placements.html
+++ b/past-placements.html
@@ -32,6 +32,35 @@
         <!-- Page Header-->
         <!-- <section class="section page-header-navbar rd-navbar-outer jumbotron-classic"> -->
         <header class="section page-header ">
+            <div class="social-floating">
+                <ul class="social-media-float social-media text-white list-inline text-lg-right text-center margin-0px">
+
+                    <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li">
+                        <a style="color:white;" class="facebook" href="https://www.instagram.com/tpc_ccet26/"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="fa fa-instagram" style="font-size: 25px;" aria-hidden="true"></i>
+                        </a>
+                    </li>
+
+                    <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li">
+                        <a style="color:white;" class="facebook" href="https://www.facebook.com/TpcCCET/"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="fa fa-facebook" style="font-size: 25px;" aria-hidden="true"></i>
+                        </a>
+                    </li>
+
+                    <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li"><a
+                            style="color:white;" class="facebook"
+                            href="https://in.linkedin.com/in/training-and-placement-cell-ccet-panjab-university-641341112"
+                            target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" style="font-size: 25px;"
+                                aria-hidden="true"></i></a>
+                    </li>
+
+                    <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li"><a
+                            style="color:white;" class="facebook" href="mailto:tpo@ccet.ac.in"><i
+                                class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
             <!-- RD Navbar-->
             <div class="rd-navbar-wrap">
                 <nav class="rd-navbar rd-navbar-minimal rd-navbar-minimal-wide" data-layout="rd-navbar-fixed"
@@ -846,7 +875,8 @@
                                 </li>
                                 <li class="object-inline">
                                     <span class="icon icon-md mdi mdi-link-variant text-primary"></span>
-                                    <a class="link-default" target="_blank" href="https://www.ccet.ac.in">www.ccet.ac.in</a>
+                                    <a class="link-default" target="_blank"
+                                        href="https://www.ccet.ac.in">www.ccet.ac.in</a>
                                 </li>
                             </ul>
                         </div>
@@ -859,9 +889,10 @@
                     <!-- Rights-->
                     <p class="rights text-center"><span>&copy;&nbsp;</span><span
                             class="copyright-year"></span><span>&nbsp;</span><span>All Rights
-                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by Training and
-            Placement Cell CCET |
-            <a href="webmasters.html" class="text-primary">Webmasters</a>
+                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by
+                        Training and
+                        Placement Cell CCET |
+                        <a href="webmasters.html" class="text-primary">Webmasters</a>
                 </div>
             </div>
         </footer>
