--- a/events.html
+++ b/events.html
@@ -32,6 +32,35 @@
         <!-- Page Header-->
         <!-- <section class="section page-header-navbar rd-navbar-outer jumbotron-classic"> -->
         <header class="section page-header ">
+            <div class="social-floating">
+                <ul class="social-media-float social-media text-white list-inline text-lg-right text-center margin-0px">
+
+                    <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li">
+                        <a style="color:white;" class="facebook" href="https://www.instagram.com/tpc_ccet26/"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="fa fa-instagram" style="font-size: 25px;" aria-hidden="true"></i>
+                        </a>
+                    </li>
+
+                    <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li">
+                        <a style="color:white;" class="facebook" href="https://www.facebook.com/TpcCCET/"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="fa fa-facebook" style="font-size: 25px;" aria-hidden="true"></i>
+                        </a>
+                    </li>
+
+                    <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li"><a
+                            style="color:white;" class="facebook"
+                            href="https://in.linkedin.com/in/training-and-placement-cell-ccet-panjab-university-641341112"
+                            target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" style="font-size: 25px;"
+                                aria-hidden="true"></i></a>
+                    </li>
+
+                    <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li"><a
+                            style="color:white;" class="facebook" href="mailto:tpo@ccet.ac.in"><i
+                                class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
             <!-- RD Navbar-->
             <div class="rd-navbar-wrap">
                 <nav class="rd-navbar rd-navbar-minimal rd-navbar-minimal-wide" data-layout="rd-navbar-fixed"
@@ -246,8 +275,8 @@
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1, Type 2">
                         <!-- Thumbnail Classic-->
                         <a class="thumbnail-classic" href="images/events/Educorp.png" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/events/Educorp.png" alt=""
-                                width="370" height="256" />
+                                class="thumbnail-classic-image" src="images/events/Educorp.png" alt="" width="370"
+                                height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">EduCorp</p>
                                 <p class="thumbnail-classic-text">29 March, 2023</p>
@@ -258,8 +287,8 @@
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1, Type 2">
                         <!-- Thumbnail Classic-->
                         <a class="thumbnail-classic" href="images/events/Times.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/events/Times.jpg" alt=""
-                                width="370" height="256" />
+                                class="thumbnail-classic-image" src="images/events/Times.jpg" alt="" width="370"
+                                height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Time Institute</p>
                                 <p class="thumbnail-classic-text">24 March, 2023</p>
@@ -270,8 +299,8 @@
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1, Type 2">
                         <!-- Thumbnail Classic-->
                         <a class="thumbnail-classic" href="images/events/GAP 2023.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/events/GAP 2023.jpg" alt=""
-                                width="370" height="256" />
+                                class="thumbnail-classic-image" src="images/events/GAP 2023.jpg" alt="" width="370"
+                                height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Gemini Ambassador Program (GAP)</p>
                                 <p class="thumbnail-classic-text">20 March 2023</p>
@@ -282,8 +311,8 @@
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
                         <!-- Thumbnail Classic-->
                         <a class="thumbnail-classic" href="images/events/Career Cafe.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/events/Career Cafe.jpg" alt=""
-                                width="370" height="256" />
+                                class="thumbnail-classic-image" src="images/events/Career Cafe.jpg" alt="" width="370"
+                                height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Aptitude Test by Career Cafe</p>
                                 <p class="thumbnail-classic-text">15 March, 2023</p>
@@ -294,8 +323,8 @@
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
                         <!-- Thumbnail Classic-->
                         <a class="thumbnail-classic" href="images/events/Alumni Week.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/events/Alumni Week.jpg" alt=""
-                                width="370" height="256" />
+                                class="thumbnail-classic-image" src="images/events/Alumni Week.jpg" alt="" width="370"
+                                height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Alumni Week </p>
                                 <p class="thumbnail-classic-text">9-13 May, 2022</p>
@@ -305,9 +334,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/events/Training Week 2022.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/events/Training Week 2022.jpg" alt=""
-                                width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/events/Training Week 2022.jpg"
+                            data-lightgallery="item"><img class="thumbnail-classic-image"
+                                src="images/events/Training Week 2022.jpg" alt="" width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Training Week </p>
                                 <p class="thumbnail-classic-text">22 April, 2022</p>
@@ -318,8 +347,8 @@
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1">
                         <!-- Thumbnail Classic-->
                         <a class="thumbnail-classic" href="images/events/GAP 2022.jpg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/events/GAP 2022.jpg" alt=""
-                                width="370" height="256" />
+                                class="thumbnail-classic-image" src="images/events/GAP 2022.jpg" alt="" width="370"
+                                height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Gemini Ambassador Program (GAP)</p>
                                 <p class="thumbnail-classic-text">4 January, 2022</p>
@@ -329,9 +358,9 @@
                     </div>
                     <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 3">
                         <!-- Thumbnail Classic-->
-                        <a class="thumbnail-classic" href="images/events/Alumni Week_2023.jpeg" data-lightgallery="item"><img
-                                class="thumbnail-classic-image" src="images/events/Alumni Week_2023.jpeg" alt=""
-                                width="370" height="256" />
+                        <a class="thumbnail-classic" href="images/events/Alumni Week_2023.jpeg"
+                            data-lightgallery="item"><img class="thumbnail-classic-image"
+                                src="images/events/Alumni Week_2023.jpeg" alt="" width="370" height="256" />
                             <div class="thumbnail-classic-caption">
                                 <p class="thumbnail-classic-title">Alumni Week </p>
                                 <p class="thumbnail-classic-text">10-13 April, 2023</p>
@@ -414,7 +443,8 @@
                                 </li>
                                 <li class="object-inline">
                                     <span class="icon icon-md mdi mdi-link-variant text-primary"></span>
-                                    <a class="link-default" target="_blank" href="https://www.ccet.ac.in">www.ccet.ac.in</a>
+                                    <a class="link-default" target="_blank"
+                                        href="https://www.ccet.ac.in">www.ccet.ac.in</a>
                                 </li>
                             </ul>
                         </div>
@@ -427,9 +457,10 @@
                     <!-- Rights-->
                     <p class="rights text-center"><span>&copy;&nbsp;</span><span
                             class="copyright-year"></span><span>&nbsp;</span><span>All Rights
-                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by Training and
-            Placement Cell CCET |
-            <a href="webmasters.html" class="text-primary">Webmasters</a>
+                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by
+                        Training and
+                        Placement Cell CCET |
+                        <a href="webmasters.html" class="text-primary">Webmasters</a>
                 </div>
             </div>
         </footer>
