--- a/our-alumni.html
+++ b/our-alumni.html
@@ -28,6 +28,35 @@
     <div class="page">
         <!-- Page Header-->
         <header class="section page-header">
+            <div class="social-floating">
+                <ul class="social-media-float social-media text-white list-inline text-lg-right text-center margin-0px">
+
+                    <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li">
+                        <a style="color:white;" class="facebook" href="https://www.instagram.com/tpc_ccet26/"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="fa fa-instagram" style="font-size: 25px;" aria-hidden="true"></i>
+                        </a>
+                    </li>
+
+                    <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li">
+                        <a style="color:white;" class="facebook" href="https://www.facebook.com/TpcCCET/"
+                            target="_blank" rel="noopener noreferrer">
+                            <i class="fa fa-facebook" style="font-size: 25px;" aria-hidden="true"></i>
+                        </a>
+                    </li>
+
+                    <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li"><a
+                            style="color:white;" class="facebook"
+                            href="https://in.linkedin.com/in/training-and-placement-cell-ccet-panjab-university-641341112"
+                            target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin" style="font-size: 25px;"
+                                aria-hidden="true"></i></a>
+                    </li>
+
+                    <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li"><a
+                            style="color:white;" class="facebook" href="mailto:tpo@ccet.ac.in"><i
+                                class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a></li>
+                </ul>
+            </div>
             <!-- RD Navbar-->
             <div class="rd-navbar-wrap">
                 <nav class="rd-navbar rd-navbar-minimal rd-navbar-minimal-wide" data-layout="rd-navbar-fixed"
@@ -888,7 +917,13 @@
                                     </path>
                                 </svg>
                                 <div class="quote-light-text">
-                                    <p>I am Haider Fareed Qureshi from Civil Engineering Department. Both CCET & TPC has played a significant role in helping me secure a placement at Melior Structural Solutions as a Structural Engineer. I Sincerely want to thank TPC of the college for setting a smooth track since my very beginning of this journey. It was the faculty's effort that landed me towards introduction to such prestigious institutions. I am obligated to all the members of TPC and my college staff for bringing out the best in me at every stage.</p>
+                                    <p>I am Haider Fareed Qureshi from Civil Engineering Department. Both CCET & TPC has
+                                        played a significant role in helping me secure a placement at Melior Structural
+                                        Solutions as a Structural Engineer. I Sincerely want to thank TPC of the college
+                                        for setting a smooth track since my very beginning of this journey. It was the
+                                        faculty's effort that landed me towards introduction to such prestigious
+                                        institutions. I am obligated to all the members of TPC and my college staff for
+                                        bringing out the best in me at every stage.</p>
                                 </div>
                                 <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
@@ -908,7 +943,14 @@
                                 </svg>
                                 <div class="quote-light-text">
                                     <p>CCET enthuses the Dreams in You. <br> <br>
-                                        My life at CCET has been full of varied yer rich experiences and it has provided me with a platform to learn and grow, where we can explore without any hesitation. THey provifr Unprecended Support to us! <br> <br> The Training and Placement cell of CCET had put in a lot of effort, bringing to us the Best Companies in the Industry. THey helped me get placed in India's leading Ed-Tech company, Jaro Education where I'm currently working. THe guidance from our placement cell and the faculty members definitely helped me a lot in getting placed in JARO EDUCATION.</p>
+                                        My life at CCET has been full of varied yer rich experiences and it has provided
+                                        me with a platform to learn and grow, where we can explore without any
+                                        hesitation. THey provifr Unprecended Support to us! <br> <br> The Training and
+                                        Placement cell of CCET had put in a lot of effort, bringing to us the Best
+                                        Companies in the Industry. THey helped me get placed in India's leading Ed-Tech
+                                        company, Jaro Education where I'm currently working. THe guidance from our
+                                        placement cell and the faculty members definitely helped me a lot in getting
+                                        placed in JARO EDUCATION.</p>
                                 </div>
                                 <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
@@ -927,7 +969,11 @@
                                     </path>
                                 </svg>
                                 <div class="quote-light-text">
-                                    <p>I'm Abhilaksh Jit Singh from Civil Engineering department (2016-2020). I'm working at Jaro Education with a package of 12 LPA. CCET has shaped me in these four years and TPC has been instrumental in providing me with the placement opportunity. I'm gratefl to the institute for taking me where I am today, it has been a great journey.</p>
+                                    <p>I'm Abhilaksh Jit Singh from Civil Engineering department (2016-2020). I'm
+                                        working at Jaro Education with a package of 12 LPA. CCET has shaped me in these
+                                        four years and TPC has been instrumental in providing me with the placement
+                                        opportunity. I'm gratefl to the institute for taking me where I am today, it has
+                                        been a great journey.</p>
                                 </div>
                                 <!-- <div class="quote-light-footer"><img class="quote-light-image"
                                         src="images/logo-majestic-104x64.png" alt="" width="104" height="64" />
@@ -1445,7 +1491,8 @@
                                 </li>
                                 <li class="object-inline">
                                     <span class="icon icon-md mdi mdi-link-variant text-primary"></span>
-                                    <a class="link-default" target="_blank" href="https://www.ccet.ac.in">www.ccet.ac.in</a>
+                                    <a class="link-default" target="_blank"
+                                        href="https://www.ccet.ac.in">www.ccet.ac.in</a>
                                 </li>
                             </ul>
                         </div>
@@ -1458,9 +1505,10 @@
                     <!-- Rights-->
                     <p class="rights text-center"><span>&copy;&nbsp;</span><span
                             class="copyright-year"></span><span>&nbsp;</span><span>All Rights
-                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by Training and
-            Placement Cell CCET |
-            <a href="webmasters.html" class="text-primary">Webmasters</a>
+                            Reserved.</span><span>&nbsp;</span><br class="d-sm-none" />Designed and Developed by
+                        Training and
+                        Placement Cell CCET |
+                        <a href="webmasters.html" class="text-primary">Webmasters</a>
                 </div>
             </div>
         </footer>
