--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -523,6 +523,8 @@
                                             </div>
 
                                             <div class="mt-3 text-center">
+                                                <a href="https://www.overleaf.com/read/jbxjjqjmhtvn"
+                                                    class="btn btn-primary btn-lg mr-2">Editable Link</a>
                                                 <a href="images/pdf/cvFormat.pdf" download="cvFormat.pdf"
                                                     class="btn btn-primary btn-lg">Download PDF</a>
                                             </div>
