--- a/contact-us.html
+++ b/contact-us.html
@@ -368,9 +368,8 @@
                     </div>
                     <div class="col-md-12">
                       <div class="form-wrap wow fadeSlideInUp">
-                        <button type="button" id="jobDescBtn" class="btn btn-primary w-75"
-                          style="display:block;height:40px;margin:auto"
-                          onclick="document.getElementById('jobDescInput').click()">
+                        <button type="button" id="jobDescBtn" class="btn button-secondary d-block w-75 m-auto"
+                          style="height:40px;" onclick="document.getElementById('jobDescInput').click()">
                           Click Here to Upload Job
                           Description</button>
                         <div id="data"></div> <!-- dont remove this div -->
@@ -379,11 +378,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="mt-3 text-center">
-                    <a href="images/pdf/CCET TPC Brochure @2024.pdf"
-                        download="CCET TPC Brochure.pdf"
-                        class="button button-primary button-lg">Download PDF Brochure</a>
-                </div>
+
                   <div class="col-md-12 mt-3 text-center">
                     <div class="wow-outer ">
                       <button class="button button-primary" type="submit" id="companyRegSubmit">Register</button>
@@ -404,6 +399,18 @@
         </div>
       </div>
     </section>
+
+    <div class="off-msg-head text-center bg-secondary border-none border-bottom">
+      <h4 class="wow-outer text-center p-2">
+        <span class="wow slideInLeft" style="visibility: visible; animation-name: slideInLeft;">
+          <div class="my-2 text-center">
+            <a href="images/pdf/TPC code of conduct 2021.pdf" download="TPC code of conduct 2021.pdf"
+              class="button button-primary btn-md">Download TPC Brochure</a>
+          </div>
+        </span>
+      </h4>
+    </div>
+
     <div class="container-block containerteam bg-gray-100">
       <p class="text-blk team-head-text">
         Our Team
