--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="icon" href="images/ccet.png" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css"
-        href="http://fonts.googleapis.com/css?family=Work+Sans:300,700,800%7COswald:300,400,500">
+        href="https://fonts.googleapis.com/css?family=Work+Sans:300,700,800%7COswald:300,400,500">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css" id="main-styles-link">
