--- a/contact-us.html
+++ b/contact-us.html
@@ -400,7 +400,7 @@
       </div>
     </section>
 
-    <div class="off-msg-head text-center bg-secondary border-none border-bottom">
+    <!-- <div class="off-msg-head text-center bg-secondary border-none border-bottom">
       <h4 class="wow-outer text-center p-2">
         <span class="wow slideInLeft" style="visibility: visible; animation-name: slideInLeft;">
           <div class="my-2 text-center">
@@ -409,7 +409,7 @@
           </div>
         </span>
       </h4>
-    </div>
+    </div> -->
 
     <div class="container-block containerteam bg-gray-100">
       <p class="text-blk team-head-text">
