--- a/index.html
+++ b/index.html
@@ -350,9 +350,10 @@
                                 placement statistics over the years and the fact that our students bear the recession
                                 blues with record-breaking placements itself is a testimony to our quality. So, we would
                                 be happy to schedule a mutually convenient date for your visit to our campus.</span></p>
-                        <div class="wow-outer button-outer"><a
-                                class="button button-lg button-primary button-winona wow slideInDown"
-                                data-wow-delay=".1s" href="past-placements.html">Learn more</a></div>
+                        <div class="wow-outer button-outer">
+                            <a href="images/pdf/TPC code of conduct 2021.pdf" download="TPC code of conduct 2021.pdf"
+                                class="button button-primary btn-md">Download TPC Brochure</a>
+                        </div>
                     </div>
                     <!-- <div class="col-md-10 col-lg-6 wow-outer"><img class="img-responsive wow slideInRight"
                             src="images/large-features-2-570x368.jpg" alt="" width="570" height="368" />
