--- a/events.html
+++ b/events.html
@@ -368,6 +368,30 @@
                             <div class="thumbnail-classic-dummy"></div>
                         </a>
                     </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 1, Type 2">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/events/Hitbullseye seminar.png"
+                            data-lightgallery="item"><img class="thumbnail-classic-image"
+                                src="images/events/Hitbullseye seminar.png" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Hitbullseye Seminar</p>
+                                <p class="thumbnail-classic-text">19 April, 2023</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 isotope-item" data-filter="Type 2">
+                        <!-- Thumbnail Classic-->
+                        <a class="thumbnail-classic" href="images/events/Training Week 2023.png"
+                            data-lightgallery="item"><img class="thumbnail-classic-image"
+                                src="images/events/Training Week 2023.png" alt="" width="370" height="256" />
+                            <div class="thumbnail-classic-caption">
+                                <p class="thumbnail-classic-title">Training Week 2023</p>
+                                <p class="thumbnail-classic-text">17-21 April, 2023</p>
+                            </div>
+                            <div class="thumbnail-classic-dummy"></div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
