--- a/events.html
+++ b/events.html
@@ -58,7 +58,12 @@
 
                     <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li"><a
                             style="color:white;" class="facebook" href="mailto:tpo@ccet.ac.in"><i
-                                class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a></li>
+                                class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a>
+                    </li>
+                    <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li"><a
+                            style="color:white;" class="facebook" href="tel:+91-94144-03565"><i class="fa fa-phone"
+                                style="font-size: 25px;" aria-hidden="true"></i></a>
+                    </li>
                 </ul>
             </div>
             <!-- RD Navbar-->
