--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -58,7 +58,12 @@
 
                     <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li"><a
                             style="color:white;" class="facebook" href="mailto:tpo@ccet.ac.in"><i
-                                class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a></li>
+                                class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a>
+                    </li>
+                    <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li"><a
+                            style="color:white;" class="facebook" href="tel:+91-94144-03565"><i class="fa fa-phone"
+                                style="font-size: 25px;" aria-hidden="true"></i></a>
+                    </li>
                 </ul>
             </div>
             <!-- RD Navbar-->
@@ -516,14 +521,16 @@
                                     <div class="info-container mt-2 mb-2">
                                         <div class="col-md-12">
                                             <div class="text-center">
-                                                <img src="images/pdf/cvFormat.jpg" class="img-fluid"
+                                                <img src="images/pdf/Resume Template @2024.png" class="img-fluid"
                                                     alt="Resume Template">
                                             </div>
 
                                             <div class="mt-3 text-center">
                                                 <a href="https://www.overleaf.com/read/jbxjjqjmhtvn"
-                                                    class="btn btn-primary btn-lg mr-2">Editable Link</a>
-                                                <a href="images/pdf/cvFormat.pdf" download="cvFormat.pdf"
+                                                    class="btn btn-primary btn-lg mr-2" target="_blank"
+                                                    rel="noreferrer noopener">Editable Link</a>
+                                                <a href="images/pdf/Resume Template @2024.pdf"
+                                                    download="Resume Template @2024.pdf"
                                                     class="btn btn-primary btn-lg">Download PDF</a>
                                             </div>
                                         </div>
