--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
 
                         <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li"><a
                                 style="color:white;" class="facebook" href="mailto:tpo@ccet.ac.in"><i
-                                    class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a></li>
+                                    class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a>
+                        </li>
+                        <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li"><a
+                                style="color:white;" class="facebook" href="tel:+91-94144-03565"><i class="fa fa-phone"
+                                    style="font-size: 25px;" aria-hidden="true"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <!-- RD Navbar-->
@@ -352,7 +357,7 @@
                                 be happy to schedule a mutually convenient date for your visit to our campus.</span></p>
                         <div class="wow-outer button-outer">
                             <a href="images/pdf/TPC code of conduct 2021.pdf" download="TPC code of conduct 2021.pdf"
-                                class="button button-primary btn-md">Download TPC Brochure</a>
+                                class="button button-primary btn-md">Placement Brochure</a>
                         </div>
                     </div>
                     <!-- <div class="col-md-10 col-lg-6 wow-outer"><img class="img-responsive wow slideInRight"
