--- a/past-placements.html
+++ b/past-placements.html
@@ -58,7 +58,12 @@
 
                     <li style="background-color: #3e599c;" class="list-inline-item social-media-float-li"><a
                             style="color:white;" class="facebook" href="mailto:tpo@ccet.ac.in"><i
-                                class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a></li>
+                                class="fa fa-envelope-o" style="font-size: 25px;" aria-hidden="true"></i></a>
+                    </li>
+                    <li style="background-color: #5662d8;" class="list-inline-item social-media-float-li"><a
+                            style="color:white;" class="facebook" href="tel:+91-94144-03565"><i class="fa fa-phone"
+                                style="font-size: 25px;" aria-hidden="true"></i></a>
+                    </li>
                 </ul>
             </div>
             <!-- RD Navbar-->
@@ -322,15 +327,13 @@
                         <div class="tabs-custom tabs-horizontal tabs-line" id="tabs-1">
                             <!-- Nav tabs-->
                             <ul class="nav nav-tabs">
-                                <li class="nav-item" role="presentation"><a class="nav-link active" href="#tabs-1-1"
-                                        data-toggle="tab">2020</a></li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-2"
+                                <li class="nav-item active" role="presentation"><a class="nav-link active" href="#tabs-1-1"
                                         data-toggle="tab">2021</a></li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3"
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-2"
                                         data-toggle="tab">2022</a></li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-4"
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-3"
                                         data-toggle="tab">2023</a></li>
-                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-5"
+                                <li class="nav-item" role="presentation"><a class="nav-link" href="#tabs-1-4"
                                         data-toggle="tab">Last 5 year Statistics</a></li>
                             </ul>
                             <!-- Tab panes-->
@@ -393,8 +396,7 @@
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="d-block w-100"
-                                                    src="./images/Past Placements/Placement Record of 2020 Graduated Students.svg"
+                                                <img class="d-block w-100" src="./images/Past Placements/2021 final.svg"
                                                     alt="Placement Records">
                                             </div>
                                         </div>
@@ -472,8 +474,7 @@
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="d-block w-100"
-                                                    src="./images/Past Placements/Placement Record of 2021 Graduated Students.svg"
+                                                <img class="d-block w-100" src="./images/Past Placements/2022 final.svg"
                                                     alt="Placement Records">
                                             </div>
                                         </div>
@@ -547,8 +548,7 @@
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="d-block w-100"
-                                                    src="./images/Past Placements/Placement Record of 2022 Graduated Students.svg"
+                                                <img class="d-block w-100" src="./images/Past Placements/2023 final.svg"
                                                     alt="Placement Records">
                                             </div>
                                         </div>
@@ -583,35 +583,39 @@
                                                         <tbody>
                                                             <tr>
                                                                 <td>1</td>
-                                                                <td>Cvent</td>
+                                                                <td>Walmart</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>2</td>
-                                                                <td>Infosys</td>
+                                                                <td>Jungleworks</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>3</td>
-                                                                <td>uTrade</td>
+                                                                <td>TCS</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>4</td>
-                                                                <td>Quark</td>
+                                                                <td>Infosys</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>5</td>
-                                                                <td>Gemini Solutions</td>
+                                                                <td>IndiaMART</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>6</td>
-                                                                <td>Godrej and Boyce</td>
+                                                                <td>Gemini Solutions</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>7</td>
-                                                                <td>Indian Oil Adani Gas Private Limited</td>
+                                                                <td>L&T</td>
                                                             </tr>
                                                             <tr>
                                                                 <td>8</td>
-                                                                <td>Melior Structures</td>
+                                                                <td>Icuerious</td>
+                                                            </tr>
+                                                            <tr>
+                                                                <td>9</td>
+                                                                <td>Wipro</td>
                                                             </tr>
                                                         </tbody>
                                                     </table>
@@ -619,7 +623,7 @@
                                             </div>
                                             <div class="carousel-item">
                                                 <img class="d-block w-100"
-                                                    src="./images/Past Placements/Placement Record of 2023 Graduated Students.svg"
+                                                    src="./images/Past Placements/5year final.svg"
                                                     alt="Placement Records">
                                             </div>
                                         </div>
@@ -631,36 +635,6 @@
                                             <span class="sr-only">Previous</span>
                                         </a>
                                         <a class="carousel-control-next" href="#carousel4Controls" role="button"
-                                            data-slide="next">
-                                            <!-- <span class="carousel-control-next-icon"></span> -->
-                                            <button type="button" data-role="none" class="slick-next slick-arrow"
-                                                aria-label="Next" role="button">Next</button>
-                                            <span class="sr-only">Next</span>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="tab-pane fade" id="tabs-1-5">
-                                    <div id="carousel5Controls" class="carousel slide" data-ride="carousel">
-                                        <div class="carousel-inner col-11 mx-auto">
-                                            <div class="carousel-item active">
-                                                <img class="d-block w-100"
-                                                    src="./images/Past Placements/Average Package over years.svg"
-                                                    alt="Average Package over years">
-                                            </div>
-                                            <div class="carousel-item">
-                                                <img class="d-block w-100"
-                                                    src="./images/Past Placements/Median Package over years.svg"
-                                                    alt="Median Package over years">
-                                            </div>
-                                        </div>
-                                        <a class="carousel-control-prev" href="#carousel5Controls" role="button"
-                                            data-slide="prev">
-                                            <!-- <span class="carousel-control-prev-icon"></span> -->
-                                            <button type="button" data-role="none" class="slick-prev slick-arrow"
-                                                aria-label="Previous" role="button">Previous</button>
-                                            <span class="sr-only">Previous</span>
-                                        </a>
-                                        <a class="carousel-control-next" href="#carousel5Controls" role="button"
                                             data-slide="next">
                                             <!-- <span class="carousel-control-next-icon"></span> -->
                                             <button type="button" data-role="none" class="slick-next slick-arrow"
