resume links updated

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -528,10 +528,9 @@
                                             <div class="mt-3 text-center">
                                                 <a href="https://www.overleaf.com/read/jbxjjqjmhtvn"
                                                     class="btn btn-primary btn-lg mr-2" target="_blank"
-                                                    rel="noreferrer noopener">Editable Link</a>
-                                                <a href="images/pdf/Resume Template @2024.pdf"
-                                                    download="Resume Template @2024.pdf"
-                                                    class="btn btn-primary btn-lg">Download PDF</a>
+                                                    rel="noreferrer noopener">Latex Document</a>
+                                                <a href="https://drive.google.com/drive/folders/1rZpeeXjQD8I2VtlOkE-RZUauR5cpQ344?usp=sharing"
+                                                    class="btn btn-primary btn-lg">Download Word</a>
                                             </div>
                                         </div>
                                     </div>
