--- a/webmasters.html
+++ b/webmasters.html
@@ -307,15 +307,15 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Uday Madan.jpg">
+              <img class="team-img" src="images\new eb post 2024\saket.jpg">
               <div class="overlayteam" style="text-align: center;"><a
-                  href="https://www.linkedin.com/in/uday-madan-14753820b" target="_blank"><i
+                  href="https://www.linkedin.com/in/saketsarin/" target="_blank"><i
                     class="fa fa-linkedin-square" style="font-style: normal;"></i>
                 </a></div>
             </div>
             <div class="team-card-content">
               <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Uday Madan
+                Saket Sarin
               </p>
               <p class="text-blk team-position" style="text-align: center;">
                 Website Head
@@ -329,28 +329,9 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images/webmasters/saket-sarin.png">
-              <div class="overlayteam" style="text-align: center;"><a href="https://www.linkedin.com/in/saketsarin"
+              <img class="team-img" src="images\new eb post 2024\Tushar.jpg">
+              <div class="overlayteam" style="text-align: center;"><a href="https://in.linkedin.com/in/tushar-singh-b0b964238"
                   target="_blank">
-                  <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
-                </a></div>
-            </div>
-            <div class="team-card-content">
-              <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Saket Sarin
-              </p>
-              <p class="text-blk team-position" style="text-align: center;">
-                Webmaster
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-          <div class="team-card">
-            <div class="team-img-wrapper">
-              <img class="team-img" src="images/webmasters/tushar.jpg">
-              <div class="overlayteam" style="text-align: center;"><a
-                  href="https://www.linkedin.com/in/tushar-singh-b0b964238/" target="_blank">
                   <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
                 </a></div>
             </div>
@@ -367,37 +348,15 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Devashish Gupta.jpg">
+              <img class="team-img" src="images\new eb post 2024\Jaskirat.jpg">
               <div class="overlayteam" style="text-align: center;"><a
-                  href="https://www.linkedin.com/in/devashish-gupta-066a16200" target="_blank"><i
-                    class="fa fa-linkedin-square" style="font-style: normal;"></i>
-                </a></div>
-            </div>
-            <div class="team-card-content">
-              <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Devashish Gupta
-              </p>
-              <p class="text-blk team-position" style="text-align: center;">
-                Webmaster
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="responsive-container-block teamcard-container">
-        <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-          <div class="team-card">
-            <div class="team-img-wrapper">
-              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Soumya Sharma-zoomed.jpeg">
-              <div class="overlayteam" style="text-align: center;"><a href="https://www.linkedin.com/in/soumya-sharma29"
-                  target="_blank">
+                  href="https://in.linkedin.com/in/jaskirat-kaur23" target="_blank">
                   <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
                 </a></div>
             </div>
             <div class="team-card-content">
               <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Soumya Sharma
+                Jaskirat Kaur
               </p>
               <p class="text-blk team-position" style="text-align: center;">
                 Webmaster
@@ -408,34 +367,15 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\STUDENT TEAM\2023_Team\Deepak Mahto.jpg">
+              <img class="team-img" src="images\new eb post 2024\saksham.jpg">
               <div class="overlayteam" style="text-align: center;"><a
-                  href="https://www.linkedin.com/in/deepakmahto1212/" target="_blank">
-                  <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
-                </a></div>
-            </div>
-            <div class="team-card-content">
-              <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Deepak Mahto
-              </p>
-              <p class="text-blk team-position" style="text-align: center;">
-                Webmaster
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
-          <div class="team-card">
-            <div class="team-img-wrapper">
-              <img class="team-img" src="images/webmasters/mehak.jpeg">
-              <div class="overlayteam" style="text-align: center;"><a
-                  href="https://in.linkedin.com/in/mehak-preet-133a03233" target="_blank"><i
+                  href="https://www.linkedin.com/in/saksham-arora-81b344291/" target="_blank"><i
                     class="fa fa-linkedin-square" style="font-style: normal;"></i>
                 </a></div>
             </div>
             <div class="team-card-content">
               <p class="text-blk team-name" style="font-weight: bold; text-align: center;">
-                Mehak Preet
+                Saksham Arora
               </p>
               <p class="text-blk team-position" style="text-align: center;">
                 Webmaster
