--- a/webmasters.html
+++ b/webmasters.html
@@ -329,7 +329,7 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\new eb post 2024\Tushar.jpg">
+              <img class="team-img" src="images\new eb post 2024\tushar.jpg">
               <div class="overlayteam" style="text-align: center;"><a href="https://in.linkedin.com/in/tushar-singh-b0b964238"
                   target="_blank">
                   <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
@@ -348,7 +348,7 @@
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
           <div class="team-card">
             <div class="team-img-wrapper">
-              <img class="team-img" src="images\new eb post 2024\Jaskirat.jpg">
+              <img class="team-img" src="images\new eb post 2024\jaskirat.jpg">
               <div class="overlayteam" style="text-align: center;"><a
                   href="https://in.linkedin.com/in/jaskirat-kaur23" target="_blank">
                   <i class="fa fa-linkedin-square" style="font-style: normal;"></i>
